# vapt-report-generator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: company_template.docx  custom_template.html.j2  sample_burp.xml  sample_findings.json  sample_nessus.nessus  sample_nmap.xml  sample_nuclei.jsonl  sample_zap.json
tests/: test_vaptreport.py
vaptreport/: __init__.py  cli.py  models.py  scoring.py  wizard.py
vaptreport/parsers/: __init__.py  _util.py  acunetix_pdf.py  burp.py  findings.py  nessus.py  nmap.py  nuclei.py  zap.py
vaptreport/reporters/: __init__.py  docx.py  excel.py  html.py  pdf.py
vaptreport/templates/: report.html.j2
